--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20"
   }
