--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "mysql2": "^3.1.2",
-    "nodemon": "^2.0.20"
+    "node-cron": "^3.0.2",
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.6.0"
   }
 }
