--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
